# fission-server

./: .envrc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  codecov.yml  deny.toml  docker-compose.yml  fissionServerSwagger.yaml  flake.nix  musl.Dockerfile  rust-toolchain.toml
.github/workflows/: audit.yml  coverage.yml  docker.yml  nix.yml  release.yml  tests_and_checks.yml
crates/fission-server-axum/: Cargo.toml
crates/fission-server-axum/src/: main.rs
crates/fission-server-axum/src/extract/: json.rs
crates/fission-server-axum/src/middleware/: runtime.rs
crates/fission-server-axum/src/routes/: health.rs
design/: README.md  api.md  dictionary.md
docs/specs/: latest.json
fission-cli/: Cargo.toml  README.md
fission-cli/src/: cli.rs  lib.rs  logging.rs  main.rs  paths.rs  responses.rs  settings.rs  ucan.rs
fission-cli/tests/: cli.rs  main.rs  server.rs
fission-common/: Cargo.toml  README.md
fission-common/src/: authority.rs  capabilities.rs  lib.rs
fission-common/src/authority/: error.rs  key_material.rs
fission-common/src/capabilities/: delegation.rs  did.rs  top.rs
fission-core/: Cargo.toml  README.md
fission-core/src/: authority.rs  capabilities.rs  caps.rs  common.rs  dns.rs  ed_did_key.rs  facts.rs  lib.rs  revocation.rs  serde_value_source.rs  test_utils.rs  username.rs
fission-core/src/authority/: error.rs  key_material.rs
fission-core/src/capabilities/: delegation.rs  did.rs  email.rs  fission.rs  indexing.rs  top.rs  volume.rs
fission-dns/: README.md
fission-relay/: README.md
fission-server/: Cargo.toml  README.md
fission-server/config/: settings.toml
fission-server/docs/: account-creation.md  swagger.yaml
fission-server/docs/specs/: latest.json
fission-server/migrations/2023-05-16-122236_create_apps/: up.sql
fission-server/migrations/2023-05-16-122237_create_accounts/: down.sql  up.sql
fission-server/migrations/2023-05-25-181211_create_email_verifications/: down.sql  up.sql
fission-server/migrations/2023-06-15-232702_volumes/: down.sql  up.sql
fission-server/migrations/2023-10-10-110140_accounts_uniqueness/: down.sql  up.sql
fission-server/migrations/2023-10-23-090949_email_verification_no_did/: down.sql  up.sql
fission-server/migrations/2023-10-23-163251_ucans_indexer/: down.sql  up.sql
fission-server/migrations/2023-12-11-173644_revocations/: down.sql  up.sql
fission-server/migrations/2024-01-16-133611_add_handles/: down.sql  up.sql
fission-server/src/: app_state.rs  authority.rs  cache_missing.rs  docs.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  settings.rs  tracer.rs  traits.rs
fission-server/src/crypto/: mod.rs  patchedkey.rs
fission-server/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
fission-server/src/dns/: authority.rs  handler.rs  mod.rs  request_handler.rs  response.rs  response_handler.rs  server.rs  user_dids.rs
fission-server/src/extract/: authority.rs  authority_addon.rs  dag_cbor.rs  doh.rs  json.rs  mod.rs  ucan.rs
fission-server/src/headers/: header.rs
fission-server/src/metrics/: process.rs
fission-server/src/middleware/: logging.rs  request_ext.rs  runtime.rs
fission-server/src/models/: account.rs  app.rs  capability_indexing.rs  email_verification.rs  mod.rs  revocation.rs  volume.rs
fission-server/src/routes/: account.rs  auth.rs  capability_indexing.rs  doh.rs  health.rs  ipfs.rs  mod.rs  ping.rs  revocations.rs  volume.rs  ws.rs
fission-server/src/setups/: local.rs  mod.rs  prod.rs  test.rs
fission-server/src/test_utils/: ephermeral_db.rs  mod.rs  route_builder.rs  test_context.rs  test_ipfs_database.rs
fission-server/src/tracing_layers/: format_layer.rs
fission-server/tests/: integration_test.rs
server/docs/specs/: latest.json
server/src/: lib.rs  settings.rs
src/: docs.rs  lib.rs  main.rs
src/middleware/: logging.rs  reqwest_retry.rs
src/test_utils/: rvg.rs
tests/: integration_test.rs
