[workspace]
members = [
    "fission-cli",
    "fission-core",
    "fission-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = { version = "0.6", features = ["headers"] }
ed25519 = "2.2.2"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "zeroize", "pem"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
testresult = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot", "registry"] }
rs-ucan = { git = "https://github.com/fission-codes/rs-ucan/", branch = "matheus23/skip-rsa-len-check", revision = "643025b5bdb70ef7f6349cfa01361cfcc185d3ae" }
url = "2.3"
utoipa = { version = "3.1", features = ["uuid", "axum_extras"] }
validator = { version = "0.16.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full", "parking_lot"] }
tokio-util = "0.7.8"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
