[workspace]
members = [
    "fission-cli",
    "fission-core",
    "fission-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = { version = "0.6", features = ["headers"] }
config = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
car-mirror = { version = "0.1", features = ["quick_cache"] }
car-mirror-reqwest = { version = "0.1" }
wnfs = { version = "0.2.0" }
ed25519 = "2.2.2"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "zeroize", "pem"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = "0.4"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
testresult = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot", "registry"] }
rs-ucan = { git = "https://github.com/fission-codes/rs-ucan/", branch = "matheus23/skip-rsa-len-check" }
ucan = { path = "../rs-ucan" }
url = { version = "2.3", features = ["serde"] }
utoipa = { version = "3.1", features = ["uuid", "axum_extras"] }
validator = { version = "0.16.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full", "parking_lot"] }
tokio-util = "0.7.8"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
