[package]
name = "fission-core"
version = "0.1.0"
description = ""
keywords = []
categories = []
include = ["/src", "README.md", "../LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
documentation = "https://docs.rs/fission-core"
repository = "https://github.com/fission-codes/fission-server"
authors = ["Steven Vandevelde <icid.asset@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rs-ucan = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
erased-serde = "0.3.31"
linkme = "0.3.15"
ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }
did-key = "0.2.1"
libipld = "0.16.0"
bs58 = "0.5.0"
zeroize = "1.6.0"
signature = "2.1.0"
tracing = "0.1.40"
